# v_odometry

./: CMakeLists.txt  FAST_GD.cpp  FAST_GD.cpp~  FAST_GD2.cpp  FAST_GD2.cpp~  FAST_matrix.cpp  FAST_matrix.cpp~  README.md  README.md~  a.out  odometry.cpp  odometry.cpp~  only_rotation.cpp  only_rotation.cpp~  vid_odometry.cpp  vid_odometry.cpp~  visual_odometry_method.txt
MonoVisualOdometry/: .gitignore  .~lock.method_tests.ods#  0dperframe.avi  Makefile  Makefile~  method_tests.ods  mono_odometry.cpp  mono_odometry.cpp~  mono_odometry.h  mono_odometry.h~  proj  test_MonoVisualOdometry.cpp  test_MonoVisualOdometry.cpp~
MonoVisualOdometry/test_images/: +1dperframe.avi
src/: Makefile  odometry.cpp  only_rotation.cpp  test_odometry.cpp  test_rotation.cpp  visual_odometry.h
test_images/: minus1dperframe.avi
